[tool.poetry]
name = "oh-my-xdu"
version = "0.1.0"
description = "Useful tools for XDU students"
authors = ["zkonge <zkonge@outlook.com>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
parsel = "^1.5.2"
loguru = "^0.4.1"
icalendar = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
