[tool.poetry]
name = "oh-my-xdu"
version = "0.1.3"
description = "Useful tools for XDU students"
authors = ["zkonge <zkonge@outlook.com>"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "ohmyxdu" }
]

[tool.poetry.scripts]
omx = 'ohmyxdu.console:main'

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
parsel = "^1.6.0"
loguru = "^0.5.1"
icalendar = "^4.0.6"
toml = "^0.10.1"
defopt = "^6.0"
pycryptodome = "^3.9.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
