[tool.poetry]
name = "oh-my-xdu"
version = "0.1.4"
description = "Useful tools for XDU students"
authors = ["zkonge <zkonge@outlook.com>"]
license = "CC0-1.0"
packages = [
    { include = "ohmyxdu" }
]

[tool.poetry.scripts]
omx = 'ohmyxdu.console:main'

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
parsel = "^1.6.0"
loguru = "^0.5.1"
icalendar = "^4.0.6"
toml = "^0.10.1"
defopt = "^6.0"
pycryptodome = "^3.9.8"

[tool.black]
line-length = 100
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
